# docs/swagger.yaml
@@ -1,150 +1,150 @@
 basePath: /
 definitions:
-    CreateUserDTO:
-        properties:
-            email:
-                type: string
-            name:
-                type: string
-            password:
-                type: string
-            role:
-                allOf:
-                    - $ref: '#/definitions/Role'
-                enum:
-                    - user
-                    - admin
-        required:
-            - email
-            - name
-            - password
-            - role
-        type: object
-    ErrorResponse:
-        properties:
-            error:
-                example: Error message
-                type: string
-            statusCode:
-                example: 400
-                type: integer
-            statusText:
-                example: Bad Request
-                type: string
-        type: object
-    Role:
-        enum:
-            - user
-            - admin
+  api.ErrorResponse:
+    properties:
+      error:
+        example: Error message
         type: string
-        x-enum-varnames:
-            - RoleUser
-            - RoleAdmin
-    User:
-        properties:
-            createdAt:
-                type: string
-            email:
-                type: string
-            id:
-                type: string
-            name:
-                type: string
-            password:
-                type: string
-            role:
-                $ref: '#/definitions/Role'
-            updatedAt:
-                type: string
-        type: object
+      statusCode:
+        example: 400
+        type: integer
+      statusText:
+        example: Bad Request
+        type: string
+    type: object
+  model.Role:
+    enum:
+    - user
+    - admin
+    type: string
+    x-enum-varnames:
+    - RoleUser
+    - RoleAdmin
+  model.User:
+    properties:
+      createdAt:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      role:
+        $ref: '#/definitions/model.Role'
+      updatedAt:
+        type: string
+    type: object
+  user.CreateUserDTO:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      role:
+        allOf:
+        - $ref: '#/definitions/model.Role'
+        enum:
+        - user
+        - admin
+    required:
+    - email
+    - name
+    - password
+    - role
+    type: object
 info:
-    contact: {}
-    description: Documentation for the API Template.
-    title: API Template
-    version: "1.0"
+  contact: {}
+  description: Documentation for the API Template.
+  title: API Template
+  version: "1.0"
 paths:
-    /users:
-        get:
-            description: Return a list of users with pagination and optional filters.
-            parameters:
-                - default: 2000
-                  description: Maximum number of records
-                  in: query
-                  name: take
-                  type: integer
-                - default: 0
-                  description: Number of records to skip
-                  in: query
-                  name: skip
-                  type: integer
-            produces:
-                - application/json
-            responses:
-                "200":
-                    description: OK
-                    schema:
-                        items:
-                            $ref: '#/definitions/User'
-                        type: array
-                "400":
-                    description: Bad Request
-                    schema:
-                        $ref: '#/definitions/ErrorResponse'
-                "500":
-                    description: Internal Server Error
-                    schema:
-                        $ref: '#/definitions/ErrorResponse'
-            summary: Find all users
-            tags:
-                - users
-        post:
-            consumes:
-                - application/json
-            description: Create a new user.
-            parameters:
-                - description: User data
-                  in: body
-                  name: user
-                  required: true
-                  schema:
-                    $ref: '#/definitions/CreateUserDTO'
-            produces:
-                - application/json
-            responses:
-                "200":
-                    description: OK
-                "400":
-                    description: Bad Request
-                    schema:
-                        $ref: '#/definitions/ErrorResponse'
-                "500":
-                    description: Internal Server Error
-                    schema:
-                        $ref: '#/definitions/ErrorResponse'
-            summary: Create user
-            tags:
-                - users
-    /users/{id}:
-        get:
-            description: Return a user by ID.
-            parameters:
-                - description: User ID
-                  in: path
-                  name: id
-                  required: true
-                  type: string
-            produces:
-                - application/json
-            responses:
-                "200":
-                    description: OK
-                    schema:
-                        $ref: '#/definitions/User'
-                "500":
-                    description: Internal Server Error
-                    schema:
-                        $ref: '#/definitions/ErrorResponse'
-            summary: Find user by ID
-            tags:
-                - users
+  /users:
+    get:
+      description: Return a list of users with pagination and optional filters.
+      parameters:
+      - default: 2000
+        description: Maximum number of records
+        in: query
+        name: take
+        type: integer
+      - default: 0
+        description: Number of records to skip
+        in: query
+        name: skip
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.User'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Find all users
+      tags:
+      - users
+    post:
+      consumes:
+      - application/json
+      description: Create a new user.
+      parameters:
+      - description: User data
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.CreateUserDTO'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Create user
+      tags:
+      - users
+  /users/{id}:
+    get:
+      description: Return a user by ID.
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.User'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      summary: Find user by ID
+      tags:
+      - users
 swagger: "2.0"
