# internal/module/user/dto.go
@@ -1,15 +1,17 @@
 package user
 
+import "github.com/mayron1806/api-template/internal/model"
+
 // CreateUserDTO represents the payload to create a user.
 type CreateUserDTO struct {
-	Name     string `json:"name" validate:"required"`
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
-	Role     Role   `json:"role" validate:"required,oneof=user admin"`
+	Name     string     `json:"name" validate:"required"`
+	Email    string     `json:"email" validate:"required,email"`
+	Password string     `json:"password" validate:"required"`
+	Role     model.Role `json:"role" validate:"required,oneof=user admin"`
 }
 
-func (dto *CreateUserDTO) ToModel() *User {
-	return &User{
+func (dto *CreateUserDTO) ToModel() *model.User {
+	return &model.User{
 		Name:     dto.Name,
 		Email:    dto.Email,
 		Password: dto.Password,
